deploy/admission-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-crd
  namespace: vault-crd
spec:
  selector:
    app: vault-crd
  ports:
    - port: 8080
  type: ClusterIP
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: vault-crd
  name: vault-crd-admission
webhooks:
  - name: validate.vault.koudingspawn.de
    admissionReviewVersions: ["v1beta1"]
    sideEffects: None
    rules:
      - apiGroups:
          - koudingspawn.de
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - vault
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: vault-crd
        name: vault-crd
        path: /validation/vault-crd
        port: 8080
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRVENDQWltZ0F3SUJBZ0lVUDk4cG9lNXF0TVExWXhrVS85eHc5ZGp4N05Bd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dqRVlNQllHQTFVRUF4TVBhMjkxWkdsdVozTndZWGR1TG1SbE1CNFhEVEl3TURZeU5ERTVNVEF4TkZvWApEVE13TURZeU1qRTVNVEEwTkZvd0dqRVlNQllHQTFVRUF4TVBhMjkxWkdsdVozTndZWGR1TG1SbE1JSUJJakFOCkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXNWbklIY2JCeHl2NmpOS3V5YkZpMFNkbEtONlAKU1U2RlJOUzJwQ1NNK3R3eWtCblllZUtacTMxQmZYQW5EMlVrR1dod0gwWHF1QmJ4S3Bsa2lYWVVMT25qTFQwLwpWVG5LN1U2NWFW [...]
